infra/k8s/prod/agent/agent-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agent-ingress
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - host: agent-prod.sawalha-polyai.fursa.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agent-svc
                port:
                  number: 8000
